source/src/main/webapp/css/default.css
/*
 * Cerberus  Copyright (C) 2013  vertigo17
 * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
 *
 * This file is part of Cerberus.
 *
 * Cerberus is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * Cerberus is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Cerberus.  If not, see <http://www.gnu.org/licenses/>.
 *//* 
    Created on : May 18, 2015, 2:18:04 PM
    Author     : FNogueira
*/ 
.separator {
    border-top: 1px solid #E3E3E3;
    margin-top:20px;  
    margin-bottom:30px;  
}

td
{
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.nomargintop{
    margin-top:0px;
}
.nomarginbottom{
    margin-bottom:0px;
}

.manageRowsFont{
    font-size:12.3167px;
}


#datas {
    margin: 3px;
    vertical-align: top;
    display: inline-block;
    *zoom: 1;
    *display: inline;
    width: 100%;
}
.center{
    margin-left: auto;
    margin-right: auto;                
}    
/*widths*/
.width20{
    width: 20px;
}
.width50{
    width: 50px;
}
.width80 {
    width: 80px;
}
.width100 {
    width: 100px;
}

.width130{
    width: 130px;
}

.width150 {
    width: 150px;
}

.width200 {
    width: 200px;
}

.width250 {
    width: 250px;
}
.width350 {
    width: 350px;
}


.width500 {
    width: 500px;
}

.width600 {
    width: 600px;
}

.width800 {
    width: 800px;
}

.width850 {
    width: 850px;
}
.width900 {
    width: 900px;
}

.width950 {
    width: 950px;
}
.width1000{
    width: 1000px;
}
.width1400{
    width: 1400px;
}

/**heights**/
.height400{
    height: 400px;
}
/**margins**/

.marginRight5{
    margin-right: 5px;
}

.marginRight10{
    margin-right: 10px;
}

.marginLeft5{
    margin-left:5px;
}

.marginLeft0{
    margin-left:0px;
}
.paddingLeft0{
    padding-left:0px;
}
/*margins*/
.marginTop20{
    margin-top: 20px;
}
.marginTop25{
    margin-top: 25px;
}
.marginTop5{
    margin-top: 5px;
}

.marginBottom10{
    margin-bottom: 10px;
}


.marginBottom20{
    margin-bottom: 20px;
}
/**************************************ALERT messages ****************************/
#messagesArea { position: fixed; top: 40px; left: 0; right: 0; border: none; z-index: 50;}

/**************************************Page layout ****************************/

/*TODO After conversion change this to the main css file*/
#navcontainer {
    position: fixed;
    width:100%;
    height: 40px;
}

#page-layout{
    max-width: 1488px;       
    margin-left: auto;
    margin-right: auto;                
}
#page-layout table{
    min-height: 80%;
}
#page-layout table > tbody > tr > td {
    vertical-align: top;
    min-height: 40%;
    padding: 5px;
}

div button.margin-right25{
    /*margin-left: 5px;*/
    margin-right: 25px;
}

div button.margin-right5{
    /*margin-left: 5px;*/
    margin-right: 5px;
}
.hideElement{
    display:none;
}
.showElementInline{
    display:inline;
}


button.property_missing, button.property_tooverride, button.property_overriden {
    float:left;
    display:inline;
    width: 25px;
    height: 18px;
    margin-right: 2px; 
    padding-right:2px;
    margin-bottom: 2px
}

button.property_missing span.colorRed{
    color:#8B0404;    
}

button.property_tooverride span.colorDarkBlue{
    color: #483D8B;
}

button.property_overriden span.colorDarkYellow{
    color: #DAA520;
}

ul.typesMenu{
    overflow-y:scroll; 
    height:200px; 
    margin-top:24px; 
    margin-left:64px;
}


/*default styles used by bootstrap*/
select option{ 
    color: #555555; 
    font-size: 14px; 
    font-style:normal
}
.emptySelectOption{
    color: gray; 
    font-size: 10px; 
    font-style:italic;
}
.fileUpload {
    position: relative;
    overflow: hidden;
    margin: 10px;
}
.fileUpload input.upload {
    position: absolute;
    top: 0;
    right: 0;
    margin: 0;
    padding: 0;
    font-size: 20px;
    cursor: pointer;
    opacity: 0;
    filter: alpha(opacity=0);
}

.page-title-line {
    border-bottom: 2px solid #3D3D3D; 
    color: #3D3D3D;
    font-size: 20px;
    font-weight: 900;
    margin-bottom: 30px;
    padding-bottom: 10px;
    margin-top:10px;
    text-transform: uppercase;
}

/************PAGINATION***************************/

/*.paging_two_button .ui-button {
    float: left;
    cursor: pointer;
    *cursor: hand;
}

.paging_full_numbers .ui-button {
    padding: 2px 6px;
    margin: 0;
    cursor: pointer;
    *cursor: hand;
    color: #333 !important;
}

.dataTables_paginate .ui-button {
    margin-right: -0.1em !important;
    border: 1px solid #E5E5E5;
    margin: 2px;
    background-color: rgb(226, 228, 255);
}

.paging_full_numbers {
    width: 350px !important;
}*/

table.display { table-layout:fixed;}
table.display  th, #listOfTestDataLib td , #viewTestDataLibDataEntriesTable td{ overflow:hidden; 
                                                                                text-overflow: ellipsis; }

#viewTestDataLibDataEntriesTable.display{
    margin-left: 0px;    
}

.dataTables_paginate {
    width: auto;
}

.dataTables_info {
    padding-top: 6px;
}

#summaryTableHeader td{
    font-weight: bold;
    background-color: rgba(66,139,202,0.2);
    border:0;
}


/*
 * Sort arrow icon positioning
 */
/*table.display thead th div.DataTables_sort_wrapper {
    position: relative;
    padding-right: 20px;
}

table.display thead th div.DataTables_sort_wrapper span {
    position: absolute;
    top: 50%;
    margin-top: -8px;
    right: 0;
}*/

/*********AUTOCOMPLETE***************/
/*from:https://gist.github.com/daz/2168334*/
/* workarounds */
* html .ui-autocomplete { width:1px; } /* without this, the menu expands to 100% in IE6 */

/**AUTOCOMPLETE FOR BOOTSTRAP**/
.ui-autocomplete {
    position: absolute;
    top: 100%;
    left: 0;
    z-index: 1000;
    float: left;
    display: none;
    min-width: 160px;
    _width: 160px;
    padding: 4px 0;
    margin: 2px 0 0 0;
    list-style: none;
    background-color: #ffffff;
    border-color: #ccc;
    border-color: rgba(0, 0, 0, 0.2);
    border-style: solid;
    border-width: 1px;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
    -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
    -webkit-background-clip: padding-box;
    -moz-background-clip: padding;
    background-clip: padding-box;
    *border-right-width: 2px;
    *border-bottom-width: 2px;

}
.ui-menu-item > a.ui-corner-all {
    display: block;
    padding: 3px 15px;
    clear: both;
    font-weight: normal;
    line-height: 18px;
    color: #555555;
    white-space: nowrap;
} 
.ui-widget-content .ui-state-focus {
    color: #ffffff;
    text-decoration: none;
    background-color: #c4e3f3;
    border-radius: 0px;
    -webkit-border-radius: 0px;
    -moz-border-radius: 0px;
    background-image: none;
}

/*from http://www.bootply.com/vitor-gapitec/AugjvLCRFt*/
/* CSS used here will be applied after bootstrap.css */
.menu-ico-collapse {
    margin-left: 4px;
}

.list-group-submenu .list-group-item:first-child {
    border-top-right-radius: 0;
    border-top-left-radius: 0;
}

.list-group-submenu .list-group-item:last-child {
    margin-bottom: -1px;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
}

#testCaseListModal .modal-body {
    max-height: 500px;
    overflow-y: scroll;
}

.modal-subtitle {
    border-bottom: 2px solid #3D3D3D;
    margin-bottom: 5px;
}

.ListItem{
    height: 40px;
}

/************************** test case page **/
.fitWidth{
    width: 100%;
}
activeY{
    color: #483D8B;
}

activeN{
    color: #8B0404;
}

/***************test case page CSS *************************/
.only_functional {
    font-weight:bold;
    font-size:20px ;
    font-family: Trebuchet MS;
}

.only_functional_description_size {
    font-weight:bold;
    font-size:20px ;
    font-family: Trebuchet MS;
}

.collapseOrExpandAllStep {
    display:none;
}
.RowActionDiv{
    display:inline-block;
    background-color: white;
}
.RowActionDiv:hover {
    background-color: #EEEEEE;
    color:black;
}
.RowActionDiv:hover .AttachPictureClass{
    display: inline-block;
}
.AttachPictureClass{
    display: none;
}
.RowActionDiv:hover p{
    color:black;
}
.RowActionDiv p{
    color:white;
}
.RowActionDiv:hover input{
    background-color:#EEEEEE;
}
.RowActionDiv input{
    background-color:white;
}
.RowActionDiv:hover select{
    background-color:#EEEEEE;
}
.RowActionDiv select{
    background-color:white;
}
.RowActionDiv span{
    color:white;
}
.RowActionDiv:hover span{
    color : #008cda;
}
.RowActionDiv:focus{
    background-color: #EEEEEE;
    color:black;
}
.generalPropertyDiv{
    display:inline-block;
    background-color: white;
}
.generalPropertyDiv div{
    background-color: white;
}
.generalPropertyDiv:hover div{
    background-color: #EEEEEE;
}
.generalPropertyDiv:hover{
    background-color: #EEEEEE;
}
.generalPropertyDiv:focus{
    background-color: #EEEEEE;
}
.StepHeaderDiv {
    width:100%;
    height:45px;
    clear:both;
    /*display:block;*/
    border-style: solid;
    border-width:thin;
    border-color:#CCCCCC;
    background-image: -moz-linear-gradient(top, #ebebeb, #CCCCCC); 
    background-image: -webkit-linear-gradient(top, #ebebeb, #CCCCCC); 
    font-weight:bold;
    font-family: Trebuchet MS;
    color:#555555;
    text-align: center;

}

.StepHeaderContent {
    margin-top:15px; 
}

a.docOnline{
    /*color:white;*/
}

.RowToDelete{
    display:inline-block;
    background-color: #DD7777;
}
.RowToDelete input{
    background-color:#DD7777;
}
.RowToDelete select{
    background-color:#DD7777;
}

.libLineDiv{
    display:block;
}
.libHideLineDiv{
    display:none;
}


div.ImportedStepAction{
    margin-top:0px;    
    display:block;
    height:50px;
    width:100%;
    border-style: solid; 
    border-width:thin ;
    border-color:#CCCCCC;
}
 

input.readonlyaction_seq, input.readonlyactioncontrol_seq{
    width: 40px; 
    font-weight: bold; 
    background-color: transparent; 
    height:100%; color:grey;
    
}

div.StepUseStepLinkDiv{
    float:left;
    margin-top:10px; 
    width:10%;
}
div.StepUseStepLinkDiv button, div.StepUseStepLinkDiv a{
    margin-left: 2.5px;
} 

div.ActionOfUseStepTemp  {
    background-color:#C4EBFF;
}

div.ActionOfUseStepTemp  input, div.ActionControlOfUseStepTemp input{
    background-color: transparent;
}


div.ActionControlOfUseStepTemp  {
    background-color:#C4FFEB;
}

img.selectedPicture{
    max-height: 400px; 
    max-width: 600px;
}

.filterReportingExecution{
    margin-bottom: 10px;
    margin-left:15px;
}
.favorite{
    color: #DAA520;
}
.mandatory{
    color: #8B0404;
}

.tooltip-inner {
    max-width: 1000px;
    overflow-wrap: break-word; 
}

.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {
    background: #ff8a00;
    border: none;
    color:#000;
    border-radius:0;
    font-weight: normal;
}

